# yAPI3

./: README.md  main.py  pyproject.toml  streamlit_app.py
.junie/: AGENTS.md
classes/: quant_analytics.py  stock_client.py
modules/: alerts.py  backtest.py  factors.py  montecarlo.py  plots.py  portfolio.py  report.py
notebooks/: 1. Stock Client test.ipynb  10. Factors.ipynb  11. ETFS composition and concentration.ipynb  11. ETFS.ipynb  12. Alerts.ipynb  14. Reports.ipynb  15. Dashboard.ipynb  16. Ratios sharpe-sortino-calmar.ipynb  17. Options.ipynb  17.1 Options Positions.ipynb  18. Fred API.ipynb  19. Bitcoin Power Law.ipynb  2. Quant Analytics Test.ipynb  3. Seasonality test.ipynb  4. Portfolio_test.ipynb  5. Montecarlo.ipynb  6. Kelly criterion.ipynb  7. Best & Worst days performance.ipynb  8. Holding periods.ipynb  9. Backtest.ipynb  99. Class inspector.ipynb  Best & Worst days performance.ipynb  ETFS.ipynb  INTC_payoff.csv  Reports.ipynb  alerts.ipynb  backtest.ipynb  dashboard.ipynb  factors.ipynb  holding periods.ipynb  kelly criterion.ipynb  montecarlo.ipynb  portfolio_test.ipynb  quant_analytics_test.ipynb  report.html  seasonality.ipynb  stock client test.ipynb  tests.ipynb
notebooks/positions/: INTC.json  portfolio.json  watchlist.json
notebooks/reports/: financials.html  healthcare.html  manual_report.html  report.html  tech.html
tests/: __init__.py  test_package.py
yfinance_api3/: __init__.py
yfinance_api3/classes/: __init__.py  options.py  options_strategy.py  positions_book.py  pricing.py  quant_analytics.py  stock_client.py
yfinance_api3/dashboard/: app.py  callbacks.py  components.py
yfinance_api3/modules/: alerts.py  backtest.py  etf.py  factors.py  montecarlo.py  plots.py  portfolio.py  powerlaw.py  report.py
yfinance_api3/notebooks/: Best & Worst days performance.ipynb  ETFS.ipynb  Reports.ipynb  alerts.ipynb  backtest.ipynb  dashboard.ipynb  factors.ipynb  holding periods.ipynb  kelly criterion.ipynb  montecarlo.ipynb  portfolio_test.ipynb  quant_analytics_test.ipynb  seasonality.ipynb  stock client test.ipynb
yfinance_api3/notebooks/reports/: financials.html  healthcare.html  manual_report.html  report.html  tech.html
