[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfinance_api3"
version = "0.1.0"
description = "Reusable quantitative finance engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Paulino" }]
dependencies = [
    "yfinance>=0.2",
    "scipy",
    "matplotlib",
    "plotly",
    "yahooquery",
    "openpyxl",
]

[tool.setuptools.packages.find]
include = ["yfinance_api3*"]
exclude = ["yfinance_api3.notebooks*"]

