[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfinance_api3"
version = "0.1.0"
description = "Reusable quantitative finance engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Paulino" }]
dependencies = [
    # data
    "yfinance>=0.2",
    "yahooquery",
    "requests",
    # numeric / analytics
    "numpy",
    "pandas",
    "scipy",
    # plotting
    "plotly",
    "matplotlib",       # used by backtest fallback plot
    # file formats
    "openpyxl",         # SSGA XLSX holdings parsing
]

[project.optional-dependencies]
dashboard-dash = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
]
dashboard-streamlit = [
    "streamlit>=1.30",
]
alerts = [
    "requests",         # already in core, listed for clarity
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "build",
]

[tool.setuptools.packages.find]
include = ["yfinance_api3*"]

[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".venv",
    "build",
    "dist",
    "notebooks",
    "*.egg-info",
]
