[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfinance_api3"
version = "0.1.0"
description = "Reusable quantitative finance engine"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Paulino" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    # data
    "yfinance>=0.2",
    "yahooquery",
    "requests",
    # numeric / analytics
    "numpy",
    "pandas",
    "scipy",
    # plotting
    "plotly",
    "matplotlib",       # used by backtest fallback plot
    # file formats
    "openpyxl",         # SSGA XLSX holdings parsing
]

[project.optional-dependencies]
dashboard-dash = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
]
dashboard-streamlit = [
    "streamlit>=1.30",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "types-requests",
    "build",
]

[tool.setuptools.packages.find]
include = ["yfinance_api3*"]

[tool.ruff]
target-version = "py314"
exclude = [
    ".git",
    ".idea",
    ".venv",
    "build",
    "dist",
    "notebooks",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
